Changed background colour of .ui-widget-header to lightest-grey. Fixes tabs having wrong background colour in dialogs

--- a/src/css/boom/ui.less
+++ b/src/css/boom/ui.less
@@ -33,7 +33,7 @@
 
 .ui-widget-header {
 	border: 0;
-	background: @light-grey;
+	background: @lightest-grey;
 	color: @white;
 	font-weight: bold;
 
